# Basic-Video-Call

./: .gitignore  README.md
.github/workflows/: android.yml  iOS.yml  main.yml
Group-Audio/NERtcSample-GroupAudioCall-Web-Vue/: README.md  alias.config.js  package.json  vue.config.js
Group-Video/NERtcSample-GroupVideoCall-Android-Java/: README.md  settings.gradle
Group-Video/NERtcSample-GroupVideoCall-Electron/: README.md  compat_data  package-lock.json  package.json  vue.config.js
Group-Video/NERtcSample-GroupVideoCall-Harmony-Typescript/: .gitigonre  README.md  build-profile.json5  hvigorw  oh-package.json5
Group-Video/NERtcSample-GroupVideoCall-Web-Vue/: .eslintrc.js  README.md  package-lock.json  vue.config.js
Group-Video/NERtcSample-GroupVideoCall-Win-Mac-QT/: Makefile  Makefile.Debug  Makefile.Release  NERtcSample-GroupVideoCall.pri  NERtcSample-GroupVideoCall.pro  README.md  Toast.cpp  Toast.h  Toast.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qrc  mainwindow.ui  moc_Toast.cpp  moc_mainwindow.cpp  moc_nrtc_engine.cpp  moc_predefs.h  moc_videoWindow.cpp  moc_videowidget.cpp  nrtc_engine.cpp  nrtc_engine.h  nrtcengine_event_handler.cpp  nrtcengine_event_handler.h  qrc_mainwindow.cpp  ui_Toast.h  ui_mainwindow.h  ui_videowidget.h  ui_videowindow.h  videoWindow.cpp  videoWindow.h  videowidget.cpp  videowidget.h  videowidget.ui  videowindow.ui
Group-Video/NERtcSample-GroupVideoCall-Win-QT/: CMakeLists.txt
Group-Video/NERtcSample-GroupVideoCall-Win-QT/source/: CMakeLists.txt  main.cpp
Group-Video/NERtcSample-GroupVideoCall-Win-QT/source/include/: call_widget.h  engine.h  join_widget.h  video_widget.h
Group-Video/NERtcSample-GroupVideoCall-Win-QT/source/resource/: image.qrc
Group-Video/NERtcSample-GroupVideoCall-Win-QT/source/src/: call_widget.cpp  engine.cpp  join_widget.cpp  video_widget.cpp
Group-Video/NERtcSample-GroupVideoCall-iOS-Objective-C/: Podfile  README.md
Group-Video/NERtcSample-GroupVideoCall-iOS-Swift/: Podfile  README.md
One-to-One-Video/NERtcSample-1to1-Android-Java/: .gitignore  README.md  gradle.properties  settings.gradle
One-to-One-Video/NERtcSample-1to1-Flutter/: README.md  pubspec.yaml
One-to-One-Video/NERtcSample-1to1-Linux-Console/PushAudioVideo/: CMakeLists.txt  README.md  main.cpp  pushexternalh264video.cpp  pushexternalh264video.h  pushexternalyuvvideo.cpp  pushexternalyuvvideo.h  rtcengine.cpp  rtcengine.h  run.sh  util.h
One-to-One-Video/NERtcSample-1to1-Linux-Console/PushAudioVideo/NERTC_Linux_SDK_V5.4.10/arm64/include/: nertc_channel_event_handler.h  nertc_engine.h  nertc_engine_ex.h  nertc_error_code.h  nertc_introduction-cn.h
One-to-One-Video/NERtcSample-1to1-Linux-Console/PushAudioVideo/NERTC_Linux_SDK_V5.4.10/x86_64/include/: nertc_engine_defines.h  nertc_engine_predecode_observer.h
One-to-One-Video/NERtcSample-1to1-Linux-Console/PushAudioVideo/cmdline/: LICENSE  README.rst  cmdline.h  test.cpp  test2.cpp
One-to-One-Video/NERtcSample-1to1-Web-Vue/: .eslintignore  .eslintrc.js  README.md  package.json  vue.config.js
One-to-One-Video/NERtcSample-1to1-Windows-Qt/: CMakeLists.txt
One-to-One-Video/NERtcSample-1to1-Windows-Unreal/: NertcSampleCode.uproject
One-to-One-Video/NERtcSample-1to1-Windows_macOS-Qt/: NERtcSample-1to1-Windows_Mac.pro  README.md  main.qml  qml.qrc
(+375 files in other folders)
